trunk/NewArchive/d9aece5cb2a4b491002d52a059bee1e8-c62045dc6906f28521c17acf5314733c/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:4:2: error: found ':' in nested-name-specifier, expected '::'
 A:                      B:
  ^
main.cpp:4:1: error: 'A' does not name a type
 A:                      B:
 ^
